<resources>
    <string name="app_name">Zulu Offshore</string>
    <string name="welcome">"Welcome !"</string>
    <string name="email">Email</string>
    <string name="zulu_logo">Zulu Offshore logo</string>
    <string name="add_a_comment">Add A Comment…</string>
    <string name="sync_header">Sync</string>
    <string name="maps_header">Maps Options</string>
    <string name="run_out">You have run out of free downloads!</string>
    <string name="downloads_why">We have to limit the maps you download as these cost us money. We buy the licences and any provide some for free! if you need more there are several ways</string>
    <string name="download_how"><a href="https://www.patreon.com/zuluwaterways">Patreons</a> are unlimited!\n Add a new marker for 10\n Add a comment for 5</string>
    <string name="measure">Measure</string>
    <string name="share">Share</string>
    <string name="add_marker">Add Marker</string>
    <string name="arcgis_map">ARCGIS Map</string>
    <string name="bing_map">Bing Map</string>
    <string name="street_map">Street Map</string>
    <string name="sat_map">Satellite Map</string>
    <string name="download_maps">Download Maps</string>
    <string name="sync">Sync</string>
    <string-array name="faq">
        <item>How do I download satellite and Street imagery?</item>
        <item>If you open any marker and click on the menu in the top right of the marker window you will see options for ‘Download Maps’. You can also choose an area on the map and long press (hold your finger on a part of the map for 2 seconds) which will open up a menu. In this menu is the option to download maps. Select the map type you want to download. Once download is complete you will see a 2km by 2km area which is of a higher resolution. For highest resolution use HD maps but remember that they use 2 tokens per download.</item>
        <item>Do I have to pay for markers?</item>
        <item>All the world wide community markers and information from Zulu are free. All the functions such as gps navigation, measuring tools, search, share, comment and create markers are free. Offline satellite imagery is limited and we offer regional packs through our map shop, as well as other cruising guides and merchandise. </item>
        <item>Why do you limit map downloads?</item>
        <item>We pay per tile you download. We give you a generous free amount then we have to charge. Allocations are renewed every month</item>
        <item>I’ve run out of downloads! How do I get more?</item>
        <item>Everyone gets 50 free downloads per month. These recharge back to 50 on the first of the month. If you need more you can purchase a variety of packages from the Map Store. Patreon supporters and contributors of new information receive extra map downloads.</item>
        <item>Why do you need my location?</item>
        <item>Location is only needed to show your position on the map. We dont send this info anywhere. The guide works just fine if you deny location functionality.</item>
        <item>More map downloads for contributors?</item>
        <item>Yes, when you contribute to the community by adding new markers or commenting on existing markers we give you more downloads. Give it go and see what happens!</item>
        <item>Why can’t I just select a whole area to download?</item>
        <item>Maps for offline use are just too big and too expensive to do this way. If you were to download an area the size of the UK it would require downloading 10 million tiles, cost over $20,000 and require 160 gigabytes of space to store it. And that’s when compressed! We have tried to get the cost/space/quality balance right in order to offer you what you need most while not costing you the earth.</item>
        <item>How do I add a marker?</item>
        <item>To add a marker you must first click on the button in the bottom right of the map page. A target will appear on the screen. You can move around and zoom in and out to find the exact position where you wish to add the marker. Once you have found the correct position tap on the target to open the ‘add new marker’ window. From here, follow the prompts and fill out the different fields such as marker type, title and description. Note: from the add new marker screen you can manually input lon/lat coordinates.</item>
        <item>How do I edit/delete/comment on a Marker?</item>
        <item>You can’t edit markers at this time. Through the marker menu select edit online, to edit markers. Markers you have added before you sync can be deleted here too. Comments can also be added though this menu.</item>
        <item>Why do you not use google/apple/arcgis/etc maps?</item>
        <item>Most of the big map providers don’t allow offline use of their maps. The ones who do are prohibitively expensive. We offer what we believe to be a good balance between quality and price. </item>
        <item>How do I get the latest markers on my app?</item>
        <item>You need to Sync from time to time to get new information added by the community and to upload any markers you have added to the app. You can do so via the main menu.</item>
        <item>How do I know how many downloads I have left?</item>
        <item>When you open the menu to download a map the number in the brackets next to Download is your remaining amount. Download (43).</item>
        <item>How do I share my markers with other boaters?</item>
        <item>In the menu of each marker (top right button in the marker) there is an option to Share. This will send a link to whomever you choose. If that person has Zulu Offshore it will ask them to open it in the app otherwise it will open on the Zulu Waterways website.</item>
        <item>Why can I not navigate/plot/track?</item>
        <item>This app is primarily a cruising guide, not a navigation tool. We simply do not have the resources and capabilities at this point to offer these features effectively. </item>
        <item>How do I change language?</item>
        <item>Translation is handled though your device. You will have to change your system language in Android settings</item>
        <item>Why do you not have my language?</item>
        <item>We are looking to add languages where possible. if you want you help out give us an email</item>
        <item>Can I bulk add my data from my plotter/OPENCPN/kml/gpx/navionics?</item>
        <item>Sure give us an email and we can help you through it. We have tools that can bulk import but they are tricky to use. \n We would like to thank you for reading this far. Email us the codeword \'Factual\' for a street map pack in your region</item>
        <item>Can I move the app to my SD Card?</item>
        <item>By default the app will store maps on your sd card where available. </item>
    </string-array>
    <string name="login">Login</string>
    <string name="navionics_login">Navionics Login</string>
    <string name="navionics_maps">Navionics Maps</string>
    <string name="my_markers">My Markers</string>
    <string name="filters">Filters</string>
    <string name="settings">More</string>
    <string name="language">Language</string>
    <string name="delete_marker">Delete Marker</string>
    <string name="have_a_code">Have a code? Activate it here</string>
    <string name="paste_your_code_here">Paste your code here</string>
    <string name="activate">activate</string>
    <string name="buy_a_code">Buy a code</string>
    <string name="set_to_zero">Set to Zero</string>
    <string name="current_size">Database current size:</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="cluster_icons">Cluster Icons</string>
    <string-array name="units">
        <item>Metric</item>
        <item>Imperial</item>
        <item>Nautical</item>
    </string-array>
    <string name="delete_all">Delete all downloaded maps</string>
    <string name="upload_in_sync">Upload during Sync</string>
    <string name="no_pics_uploaded">No pictures will be uploaded during sync</string>
    <string name="pics_uploaded">Pictures will be uploaded during sync</string>
    <string name="upload_pics">Upload Pictures</string>
    <string name="download_navionics">Navionics maps</string>
    <string name="download_osm">Open Sea Maps</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="navionics">Navionics</string>
    <string name="more_settings">Preferences</string>
    <string name="hints">Tutorial</string>
    <string name="activate_a_code">Activate A Code</string>
    <string name="background_image">Background image</string>
    <string name="higher_res_info">This will download higher zoom levels if available but will double the cost</string>
    <string name="hi_res_title">High Resolution Downloads</string>
    <string name="navionics_charts">Navionics Charts</string>
    <string name="sonar_charts">Sonar Charts</string>
    <string name="navionics_settings">Navionics Settings</string>
    <string name="easy_view">Navionics Easy View</string>
    <string name="min_Zoom_sum">Zoom level where clusters are not shown (1–15)</string>
    <string name="min_zoom">Minimum Cluster Zoom</string>
    <string name="cluster_summary">Group Icons where they overlap</string>
    <string name="screen_on">Keep Screen On</string>
    <string name="download_region">Download Region</string>
    <string name="edit_marker_online">Edit Marker Online</string>
    <string name="map_store">Map Store</string>
    <string name="overlays">Overlays</string>
    <string-array name="icon_size">
        <item>XSmall</item>
        <item>Small</item>
        <item>Normal</item>
        <item>Large</item>
        <item>XLarge</item>
    </string-array>
    <string name="to_the_zulu_offline_cruising_guide">To the Zulu Offshore Cruising Guide</string>
    <string name="let_s_get_started">…Let\'s get started</string>
    <string name="first_we_need_to_get_permissions">First we need to get permissions</string>
    <string name="maps_are_too_large_to_store_in_the_app_so_we_need_access_to_your_storage_to_display_the_map">Maps are too large to store in the app so we need access to your storage to display the map</string>
    <string name="storage_permissions">Storage Permissions</string>
    <string name="location_permissions">Location Permissions</string>
    <string name="to_display_your_position_on_the_map_the_app_needs_access_to_the_gps_optional">To display your position on the map the app needs access to the gps. (Completly optional, the app will work fine without location)</string>
    <string name="facebook">Facebook</string>
    <string name="search">Search</string>
    <string name="hd_satellite_map" translatable="false">HD Satellite Map (x2)</string>
    <string name="zulu_offshore_is_a_global_cruising_guide_which_functions_offline">Zulu Offshore is a global cruising guide which functions offline.</string>
    <string name="a_wealth_of_free_community_information_n_n_contribute_new_markers_while_offline_n_n_download_satellite_imagery_and_charts">A Wealth of Free Community Information \n\n Contribute New Markers while Offline \n\n Download Satellite Imagery and Charts</string>
    <string name="alttiles" translatable="false">Alternate Tile Source</string>
    <string name="frequently_asked_questions" translatable="false">Frequently Asked Questions</string>
    <string name="downloading_single_maps_video" translatable="false">Downloading Single Maps Video</string>
    <string name="navionics_video" translatable="false">Navionics Video</string>
    <string name="installing_map_packs_video" translatable="false">Installing Map Packs Video</string>
    <string name="advanced_function_video" translatable="false">Advanced Function Video</string>
    <string name="online_mode" translatable="false">Online Mode</string>
    <string name="importd" translatable="false">Import saved maps</string>
    <string name="importt" translatable="false">Import File</string>
</resources>