<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/downloadsWindow"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<ScrollView
    android:layout_width="wrap_content"
    android:layout_gravity="center"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/run_out"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/downloads_why"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autoLink="web"
            android:text="@string/download_how"
            android:textAlignment="center" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autoLink="web"
            android:text="@string/have_a_code"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/newCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:focusableInTouchMode="true"
            android:hint="@string/paste_your_code_here"
            android:inputType="textUri|textShortMessage"
            android:textIsSelectable="true"
            android:autofillHints="@string/paste_your_code_here" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button"
            android:textColor="@color/white"
            android:layout_margin="20dp"
            android:padding="5dp"
            android:onClick="getCode"
            android:text="@string/buy_a_code"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button"
            android:textColor="@color/white"
            android:layout_margin="20dp"
            android:onClick="activateCode"
            android:text="@string/activate"/>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button"
            android:textColor="@color/white"
            android:layout_margin="20dp"
            android:padding="5dp"
            android:onClick="rateApp"
            android:text="@string/rate_the_app"/>
    </LinearLayout>
</ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>