<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context="com.app.zuluwaterways.MainActivity">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/welcomeimage1"
        android:contentDescription="@string/background_image" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="243dp"
        android:layout_height="169dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        app:srcCompat="@drawable/logozo"
        android:contentDescription="@string/zulu_logo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:orientation="vertical">




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/adamina"
            android:text="@string/first_we_need_to_get_permissions"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:shadowRadius="15"
            android:shadowColor="@color/black"
            android:textSize="24sp"
            android:background="#99000000"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/permission1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#79F8F5F5"
            android:fontFamily="@font/adamina"
            android:onClick="getStorePerm"
            android:text="@string/storage_permissions"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:background="#99000000"
            android:fontFamily="@font/adamina"
            android:text="@string/maps_are_too_large_to_store_in_the_app_so_we_need_access_to_your_storage_to_display_the_map"
            android:textAlignment="center"
            android:shadowRadius="15"
            android:shadowColor="@color/black"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/permission2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#59FFFFFF"
            android:fontFamily="@font/adamina"
            android:onClick="getLocPerm"
            android:text="@string/location_permissions"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:background="#99000000"
            android:layout_height="wrap_content"
            android:fontFamily="@font/adamina"
            android:text="@string/to_display_your_position_on_the_map_the_app_needs_access_to_the_gps_optional"
            android:textAlignment="center"
            android:shadowRadius="15"
            android:shadowColor="@color/black"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />
    </LinearLayout>




</RelativeLayout>